Fix dots not aligning in modal

--- a/client/src/assets/_shared.scss
+++ b/client/src/assets/_shared.scss
@@ -119,11 +119,11 @@ body {
     height: calc(var(--boxSize) * 2);
 }
 
-.button-content {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+.button-wrapper {
+    position: fixed;
+    transform: translate(-50%, 0);
+    top: calc(var(--boxSize) * 4);
+
     
     height: min-content;
 
@@ -131,6 +131,11 @@ body {
     padding: 16px;
     border-radius: 2px;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
+.button-content {
+    padding-left: var(--boxSize);
+    padding-right: var(--boxSize);
 }
 
 input {
